--- a/ORGANIC_WEB_DISIGN/index3.html
+++ b/ORGANIC_WEB_DISIGN/index3.html
@@ -9,7 +9,7 @@
         <div class="container1">
          <div class="logo">
             <a href="#">
-                <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/logo.gif" alt="logo" >
+                <img src="images/logo.gif" alt="logo" >
             </a>
         </div>
         <h1><a href="#">ORGANIC DESIGN</a></h1>
@@ -30,20 +30,20 @@
         </header>
 
         <div class="container2">
-            <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/main_image.jpg">
+            <img src="images/main_image.jpg">
         </div>
         <div class="container3">
             <div class=block1>
                <h2> ZEN GARDENS</h2>
-                <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/zengardens.jpg">
+                <img src="images/zengardens.jpg">
             </div>
             <div class=block2>
                <h2>ORGANIC PLANTS</h2>
-               <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/organicplants.jpg">
+               <img src="images/organicplants.jpg">
             </div>
             <div class=block3>
                 <h2>ORGANIC GARDENS</h2>
-                <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/organicgardens.jpg">   
+                <img src="images/organicgardens.jpg">   
             </div>
         
 
@@ -79,7 +79,7 @@
                         <li><a href="#">FISH SELECTIONS</a></li>
                     </ul>
                 </nav>
-                <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/services_bg_pic.jpg" width="287" height="224">
+                <img src="images/services_bg_pic.jpg" width="287" height="224">
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
     <footer>
         <div class="logo_small">
             <a href="#">
-            <img src="/home/yulia/Документы/Папка 2/ORGANIC WEB DISIGN/images/logos.gif" alt="logo">
+            <img src="images/logos.gif" alt="logo">
             </a>
             <span><a href="#">DESIGN BY STUDIO7DESIGNS | WWW.PHP-S.RU</a></span>
         </div>
