--- a/ORGANIC_WEB_DISIGN/index3.html
+++ b/ORGANIC_WEB_DISIGN/index3.html
@@ -12,7 +12,7 @@
                 <img src="images/logo.gif" alt="logo" >
             </a>
         </div>
-        <h1><a href="#">ORGANIC DESIGN</a></h1>
+        <h1><a href="#">Organic Design</a></h1>
         </div>
 
 
@@ -34,15 +34,15 @@
         </div>
         <div class="container3">
             <div class=block1>
-               <h2> ZEN GARDENS</h2>
+               <h2> Zen Gardens</h2>
                 <img src="images/zengardens.jpg">
             </div>
             <div class=block2>
-               <h2>ORGANIC PLANTS</h2>
+               <h2>Organic Plants</h2>
                <img src="images/organicplants.jpg">
             </div>
             <div class=block3>
-                <h2>ORGANIC GARDENS</h2>
+                <h2>Organic Gardens</h2>
                 <img src="images/organicgardens.jpg">   
             </div>
         
@@ -55,28 +55,28 @@
                 <div class="container5">
                      <nav class="navigation">
                     <ul>
-                        <li><a href="#">ORGANIC PRODUCE GARDENS</a></li>
-                        <li><a href="#">NATIVE PLANT SELECTIONS</a></li>
-                        <li><a href="#">GARDEN PLANNING</a></li>
-                        <li><a href="#">YEAR ROUND FLOWERS</a></li>
-                        <li><a href="#">ZEN ROCK GARDENS</a></li>
-                        <li><a href="#">WATERFALLS</a></li>
-                        <li><a href="#">PONDS</a></li>
-                        <li><a href="#">WATER PLANTS</a></li>
-                        <li><a href="#">FISH SELECTIONS</a></li>
+                        <li><a href="#">Organic Produce Gardens</a></li>
+                        <li><a href="#">Native Plant Selections</a></li>
+                        <li><a href="#">Garden Planning</a></li>
+                        <li><a href="#">Year Round Flowers</a></li>
+                        <li><a href="#">Zen Rock Gardens</a></li>
+                        <li><a href="#">Waterfalls</a></li>
+                        <li><a href="#">Ponds</a></li>
+                        <li><a href="#">Water Plants</a></li>
+                        <li><a href="#">Fish Selections</a></li>
                     </ul>
                 </nav>
                 <nav class="navigation">
                     <ul>
-                        <li><a href="#">ORGANIC PRODUCE GARDENS</a></li>
-                        <li><a href="#">NATIVE PLANT SELECTIONS</a></li>
-                        <li><a href="#">GARDEN PLANNING</a></li>
-                        <li><a href="#">YEAR ROUND FLOWERS</a></li>
-                        <li><a href="#">ZEN ROCK GARDENS</a></li>
-                        <li><a href="#">WATERFALLS</a></li>
-                        <li><a href="#">PONDS</a></li>
-                        <li><a href="#">WATER PLANTS</a></li>
-                        <li><a href="#">FISH SELECTIONS</a></li>
+                        <li><a href="#">Organic Produce Gardens</a></li>
+                        <li><a href="#">Native Plant Selections</a></li>
+                        <li><a href="#">Garden Planning</a></li>
+                        <li><a href="#">Year Round Flowers</a></li>
+                        <li><a href="#">Zen Rock Gardens</a></li>
+                        <li><a href="#">Waterfalls</a></li>
+                        <li><a href="#">Ponds</a></li>
+                        <li><a href="#">Water Plants</a></li>
+                        <li><a href="#">Fish Selections</a></li>
                     </ul>
                 </nav>
                 <img src="images/services_bg_pic.jpg" width="287" height="224">
@@ -89,14 +89,14 @@
             <a href="#">
             <img src="images/logos.gif" alt="logo">
             </a>
-            <span><a href="#">DESIGN BY STUDIO7DESIGNS | WWW.PHP-S.RU</a></span>
+            <span><a href="#">Design by studio7designs | www.php-s.ru</a></span>
         </div>
         
         <div class="menu_footer">
-            <div class="po1"><a href="#">HOME</a></div>
-            <div class="po1"><a href="#">ABOUT</a></div>
-            <div class="po1"><a href="#">SERVICES</a></div>
-            <div class="po1"><a href="#">CONTACT</a></div>
+            <div class="po1"><a href="#">Home</a></div>
+            <div class="po1"><a href="#">About</a></div>
+            <div class="po1"><a href="#">Services</a></div>
+            <div class="po1"><a href="#">Contact</a></div>
         </div>
     </footer>
 </body>
