--- a/test/index.html
+++ b/test/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <title>test</title>
 </head>
 <body>
@@ -12,9 +14,9 @@
             <div class=cont1>
                 <input type="range" min=1 max=3 step=1 class="range">
                 <div class=one>
-                    <span>Junior</span>
-                    <span>Middle</span>
-                    <span>Senior</span>
+                    <span class="level">Junior</span>
+                    <span class="level">Middle</span>
+                    <span class="level">Senior</span>
                 </div>
                 <hr>
                 <p>Переход на следующий грейд — улучшение
@@ -25,30 +27,67 @@
                 <div class="left">
                     <h2>Тело</h2>
                     <div class="bodies">
-                        <div class="person_item body blue">
+                        <div class="person_item body" id="blue">
+                            <span></span>
                             <img src="image/blue.svg">
                         </div>
-                        <div class="person_item body green">
-                                <img src="image/green.svg">
+                        <div class="person_item body" id="green">
+                            <img src="image/green.svg">
+                            <span></span>
                         </div>
-                        <div class="person_item body pink">
-                                <img src="image/pink.svg">
+                        <div class="person_item body" id="pink">
+                            <img src="image/pink.svg">
+                            <span></span>
                         </div>
                     </div>
                 </div>
                 <div class="right">
                     <h2>Лицо</h2>
-                    <div class="faces">
+                    <div class="faces" id="blue_face">
                         <div class="person_item one">
+                                <span></span>
                             <img src="image/Group 83.svg">
                         </div>
                         <div class="person_item two">
+                                <span></span>
                             <img src="image/Group 86.svg">
                         </div>
                         <div class="person_item three">
+                                <span></span>
                             <img src="image/Group 87.svg">
                         </div>
                     </div>
+
+                    <div class="faces" id="green_face">
+                        <div class="person_item four">
+                                <span></span>
+                            <img src="image/Group 88.svg">
+                        </div>
+                        <div class="person_item five">
+                                <span></span>
+                            <img src="image/Group 89.svg">
+                        </div>
+                        <div class="person_item six">
+                                <span></span>
+                            <img src="image/Group 90.svg">
+                        </div>
+                    </div>
+
+                    <div class="faces" id="pink_face">
+                        <div class="person_item seven">
+                                <span></span>
+                            <img src="image/Group 91.svg">
+                        </div>
+                        <div class="person_item eight">
+                                <span></span>
+                            <img src="image/Group 94.svg">
+                        </div>
+                        <div class="person_item nine">
+                                <span></span>
+                            <img src="image/Group 95.svg">
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </div>
