--- a/test/index.html
+++ b/test/index.html
@@ -9,20 +9,23 @@
 </head>
 <body>
     <div class="wrapper">
+<!-- -------------------------------------block_left------------------------------------------ -->
         <div class="block1">
             <h1>Грейды для frontend</h1>
+<!-- -------------------------------------slider---------------------------------------------- -->
             <div class=cont1>
                 <input type="range" min=1 max=3 step=1 class="range">
-                <div class=one>
+                <div class="lev">
                     <span class="level">Junior</span>
                     <span class="level">Middle</span>
                     <span class="level">Senior</span>
                 </div>
+<!-- ------------------------------------end_slider------------------------------------------- -->
                 <hr>
                 <p>Переход на следующий грейд — улучшение
                         качества кода и увеличение ответственности.</p>
             </div>
-                
+<!-- -----------------------------------block_left_bottom------------------------------------  -->
             <section class=cont2>
                 <div class="left">
                     <h2>Тело</h2>
@@ -43,6 +46,7 @@
                 </div>
                 <div class="right">
                     <h2>Лицо</h2>
+<!-- ------------------------------------------blue_face-------------------------------------- -->
                     <div class="faces" id="blue_face">
                         <div class="person_item one">
                                 <span></span>
@@ -57,7 +61,7 @@
                             <img src="image/Group 87.svg">
                         </div>
                     </div>
-
+<!-- ----------------------------------------------green_face--------------------------------- -->
                     <div class="faces" id="green_face">
                         <div class="person_item four">
                                 <span></span>
@@ -72,7 +76,7 @@
                             <img src="image/Group 90.svg">
                         </div>
                     </div>
-
+<!-- -----------------------------------------------pink_face--------------------------------- -->
                     <div class="faces" id="pink_face">
                         <div class="person_item seven">
                                 <span></span>
@@ -87,18 +91,30 @@
                             <img src="image/Group 95.svg">
                         </div>
                     </div>
-
                 </div>
             </section>
         </div>
+<!-- -------------------------------------------block2--------------------------------------- -->
         <div class="block2">
-            <div class="one"></div>
+                <div class="tags">
+                    <div class="tag html"><span style="font-size:21px;text-transform:uppercase" class="a">html</span></div>
+                    <div class="tag css"><span style="font-size:16px;text-transform:uppercase" class="a">css</span></div>
+                    <div class="tag sql"><span style="font-size:12px;text-transform:uppercase" class="a">sql</span></div>
+                    <div class="tag adaptive"><span style="font-size:16px" class="a">Adaptive</span></div>
+                    <div class="tag basejs"><span style="font-size:21px" class="a">Base JS</span></div>
+                    <div class="tag webpack"><span style="font-size:18px" class="a">Webpack</span></div>
+                    <div class="tag eslint"><span style="font-size:16px" class="a">ESLint</span></div>
+                    <div class="tag gulp"><span style="font-size:20px" class="a">Gulp</span></div>
+                    <div class="tag sass"><span style="font-size:12px;text-transform:uppercase"class="a">sass</span></div>
+                    <div class="tag git"><span style="font-size:11px" class="a">Git</span></div>
+                    <div class="tag pug"><span style="font-size:16px" class="a">Pug</span></div>
+                </div>
             <div class="person">
                 <img src="image/Group 98.svg" class="mac">
                 <img src="image/blue.svg" class="person_body">
                 <img src="image/Group 83.svg" class="person_face">
             </div>
-
+        </div>
         </div>
     </div>
 </body>
