--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,8 @@
                 </div>
 <!-- ------------------------------------end_slider------------------------------------------- -->
                 <hr>
+                <div class="quot l"></div>
+                <div class="quot r"></div>
                 <p>Переход на следующий грейд — улучшение
                         качества кода и увеличение ответственности.</p>
             </div>
@@ -32,14 +34,14 @@
                     <div class="bodies">
                         <div class="person_item body" id="blue">
                             <span></span>
-                            <img src="image/blue.svg">
+                            <img src="image/blue.svg" alt="blue_body">
                         </div>
                         <div class="person_item body" id="green">
-                            <img src="image/green.svg">
+                            <img src="image/green.svg" alt="green_body">
                             <span></span>
                         </div>
                         <div class="person_item body" id="pink">
-                            <img src="image/pink.svg">
+                            <img src="image/pink.svg" alt="pink_body">
                             <span></span>
                         </div>
                     </div>
@@ -48,47 +50,47 @@
                     <h2>Лицо</h2>
 <!-- ------------------------------------------blue_face-------------------------------------- -->
                     <div class="faces" id="blue_face">
-                        <div class="person_item one">
+                        <div class="person_item one"  id="blue_one">
                                 <span></span>
-                            <img src="image/Group 83.svg">
+                            <img src="image/Group83.svg" alt="face1">
                         </div>
-                        <div class="person_item two">
+                        <div class="person_item two" id="blue_two">
                                 <span></span>
-                            <img src="image/Group 86.svg">
+                            <img src="image/Group86.svg" alt="face2">
                         </div>
-                        <div class="person_item three">
+                        <div class="person_item three" id="blue_three">
                                 <span></span>
-                            <img src="image/Group 87.svg">
+                            <img src="image/Group87.svg" alt="face3">
                         </div>
                     </div>
 <!-- ----------------------------------------------green_face--------------------------------- -->
                     <div class="faces" id="green_face">
-                        <div class="person_item four">
+                        <div class="person_item four" id="green_one">
                                 <span></span>
-                            <img src="image/Group 88.svg">
+                            <img src="image/Group88.svg" alt="face4">
                         </div>
-                        <div class="person_item five">
+                        <div class="person_item five" id="green_two">
                                 <span></span>
-                            <img src="image/Group 89.svg">
+                            <img src="image/Group89.svg" alt="face5">
                         </div>
-                        <div class="person_item six">
+                        <div class="person_item six" id="green_three">
                                 <span></span>
-                            <img src="image/Group 90.svg">
+                            <img src="image/Group90.svg" alt="face6">
                         </div>
                     </div>
 <!-- -----------------------------------------------pink_face--------------------------------- -->
                     <div class="faces" id="pink_face">
-                        <div class="person_item seven">
+                        <div class="person_item seven" id="pink_one">
                                 <span></span>
-                            <img src="image/Group 91.svg">
+                            <img src="image/Group91.svg" alt="face7">
                         </div>
-                        <div class="person_item eight">
+                        <div class="person_item eight" id="pink_two">
                                 <span></span>
-                            <img src="image/Group 94.svg">
+                            <img src="image/Group94.svg" alt="face8">
                         </div>
-                        <div class="person_item nine">
+                        <div class="person_item nine" id="pink_three">
                                 <span></span>
-                            <img src="image/Group 95.svg">
+                            <img src="image/Group95.svg" alt="face9">
                         </div>
                     </div>
                 </div>
@@ -96,25 +98,40 @@
         </div>
 <!-- -------------------------------------------block2--------------------------------------- -->
         <div class="block2">
-                <div class="tags">
-                    <div class="tag html"><span style="font-size:21px;text-transform:uppercase" class="a">html</span></div>
-                    <div class="tag css"><span style="font-size:16px;text-transform:uppercase" class="a">css</span></div>
-                    <div class="tag sql"><span style="font-size:12px;text-transform:uppercase" class="a">sql</span></div>
-                    <div class="tag adaptive"><span style="font-size:16px" class="a">Adaptive</span></div>
-                    <div class="tag basejs"><span style="font-size:21px" class="a">Base JS</span></div>
-                    <div class="tag webpack"><span style="font-size:18px" class="a">Webpack</span></div>
-                    <div class="tag eslint"><span style="font-size:16px" class="a">ESLint</span></div>
-                    <div class="tag gulp"><span style="font-size:20px" class="a">Gulp</span></div>
-                    <div class="tag sass"><span style="font-size:12px;text-transform:uppercase"class="a">sass</span></div>
-                    <div class="tag git"><span style="font-size:11px" class="a">Git</span></div>
-                    <div class="tag pug"><span style="font-size:16px" class="a">Pug</span></div>
-                </div>
-            <div class="person">
-                <img src="image/Group 98.svg" class="mac">
-                <img src="image/blue.svg" class="person_body">
-                <img src="image/Group 83.svg" class="person_face">
+            <div class="tags">
+                <div class="tag html"><span style="font-size:21px;text-transform:uppercase" class="a">html</span></div>
+                <div class="tag css"><span style="font-size:16px;text-transform:uppercase" class="a">css</span></div>
+                <div class="tag sql"><span style="font-size:12px;text-transform:uppercase" class="a">sql</span></div>
+                <div class="tag adaptive"><span style="font-size:16px" class="a">Adaptive</span></div>
+                <div class="tag basejs"><span style="font-size:21px" class="a">Base JS</span></div>
+                <div class="tag webpack"><span style="font-size:18px" class="a">Webpack</span></div>
+                <div class="tag eslint"><span style="font-size:16px" class="a">ESLint</span></div>
+                <div class="tag gulp"><span style="font-size:20px" class="a">Gulp</span></div>
+                <div class="tag sass"><span style="font-size:12px;text-transform:uppercase" class="a">sass</span></div>
+                <div class="tag git"><span style="font-size:11px" class="a">Git</span></div>
+                <div class="tag pug"><span style="font-size:16px" class="a">Pug</span></div>
             </div>
-        </div>
+            <div class="person">
+                <img src="image/Group98.svg" class="mac" alt="mac">
+                <img src="image/blue.svg" class="person_body" id="pbody_blue" alt="big_body">
+                <img src="image/Group83.svg" class="person_face" id="pface_blue_one" alt="big_face">
+                <img src="image/Group86.svg" class="person_face" id="pface_blue_two" alt="big_face">
+                <img src="image/Group87.svg" class="person_face" id="pface_blue_three" alt="big_face">
+            </div>
+            <div class="person">
+                <img src="image/Group98.svg" class="mac" alt="mac">
+                <img src="image/green.svg" class="person_body" id="pbody_green" alt="big_body">
+                <img src="image/Group88.svg" class="person_face" id="pface_green_one" alt="big_face">
+                <img src="image/Group89.svg" class="person_face" id="pface_green_two" alt="big_face">
+                <img src="image/Group90.svg" class="person_face" id="pface_green_three" alt="big_face">
+            </div>
+            <div class="person">
+                <img src="image/Group98.svg" class="mac" alt="mac">
+                <img src="image/pink.svg" class="person_body" id="pbody_pink" alt="big_body">
+                <img src="image/Group91.svg" class="person_face" id="pface_pink_one" alt="big_face">
+                <img src="image/Group94.svg" class="person_face" id="pface_pink_two" alt="big_face">
+                <img src="image/Group95.svg" class="person_face" id="pface_pink_three" alt="big_face">
+            </div>
         </div>
     </div>
 </body>
