--- a/neaty/index.html
+++ b/neaty/index.html
@@ -55,7 +55,7 @@
                                 <div class="menu"><a href ="#galleryone">Gallery One</a></div>
                                 <div class="menu"><a href ="#gallerytwo">Second Gallery</a></div>
                                 <div class="menu"><a href ="#gallerythree">Third Gallery</a></div>
-                                <div class="menu"><a href ="#">Contact Us</a></div>
+                                <div class="menu"><a href ="#contact">Contact Us</a></div>
                             </nav>
                         </div>
                     </aside>
@@ -68,7 +68,7 @@
                         <img src="img/neaty-01.jpg" alt="header_image">
                     </div>
 <!-- ---------------------------------------first_block---------------------------- -->
-                <section class="welcome" id="welcome">
+                <section class="welcome indent" id="welcome">
                     <header>
                         <h1>Welcome to Neaty Design</h1>
                     </header>
@@ -76,7 +76,7 @@
                 </section>
 
 <!-- ---------------------------------------second_block-------------------------------- -->
-                <section class="about" id="about">
+                <section class="about indent" id="about">
                     <div class="about_image">
                         <img src="img/neaty-02.jpg" alt="image">
                     </div>
@@ -93,7 +93,7 @@
                 </section> 
             
 <!-- --------------------------------------------first_gallery ------------------------- -->
-                <section class="gallery" id="galleryone">
+                <section class="gallery indent" id="galleryone">
                     <header>
                         <h1>Gallery One</h1>
                     </header>
@@ -117,7 +117,7 @@
                 </section>
 
 <!-- -------------------------------------------second_gallery------------------------------ -->
-                <section class="gallery" id="gallerytwo">
+                <section class="gallery indent" id="gallerytwo">
                     <header>
                         <h1>Second Gallery</h1>
                     </header>
@@ -134,7 +134,7 @@
                     </div>
                 </section>
 <!-- -------------------------------------------third_gallery------------------------------- -->
-                <section class="gallery" id="gallerythree">
+                <section class="gallery indent" id="gallerythree">
                     <header>
                         <h1>Third Gallery</h1>
                     </header>
@@ -154,13 +154,13 @@
                     </div>
                 </section>
 <!-- -----------------------------------------contact---------------------------------------- -->
-                <section class="contact" id="contact">
+                <section class="contact indent" id="contact">
                     <div class="cont_left">
                         <header><h1>Contact Us</h1></header>
                         <form action="#" method="post">
                             <input type="text" value="Name"><br>
                             <input type="email" value="Email"><br>
-                            <textarea name="message" rows="8">Message</textarea><br>
+                            <textarea name="message" rows="9">Message</textarea><br>
                             <button type="submit">Send</button>
                         </form>
                      </div>
@@ -174,6 +174,9 @@
                     </div>  
                 </section>
             </main>
+            <footer>
+                <p class="footer indent">Copyright © 2019 Your Company | Designed by <a href="#" class="foo">templatemo</a></p>
+            </footer>
         </div>
     </div>
 </body>
