--- a/a.paukov_lesson/index.html
+++ b/a.paukov_lesson/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="lib/owlcarousel/owl.carousel.min.css">
-    <link rel = "stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="app/lib/owlcarousel/owl.carousel.min.css">
+    <link rel = "stylesheet" href="app/css/style.css">
     <title>pavuk</title>
 </head>
 <body class="page">
@@ -16,7 +16,7 @@
                 <div class="header__wrap">
                     <div class="header__logo">
                             <a href="#" class="logo">
-                                <img class="logo__picture" src="img/logo.png" alt="logo">
+                                <img class="logo__picture" src="app/img/logo.png" alt="logo">
                             </a>
                     </div>
     
@@ -77,9 +77,9 @@
 
     <div class="page__row">
         <div class="owl-carousel slider">
-           <div class="slider__item" style="background-image: url(img/slide1.jpg)"></div>
-           <div class="slider__item" style="background-image: url(img/slide2.jpg)"></div>
-           <div class="slider__item" style="background-image: url(img/slide3.jpg)"></div>
+           <div class="slider__item" style="background-image: url(app/img/slide1.jpg)"></div>
+           <div class="slider__item" style="background-image: url(app/img/slide2.jpg)"></div>
+           <div class="slider__item" style="background-image: url(app/img/slide3.jpg)"></div>
         </div>
     </div>
 
@@ -98,7 +98,7 @@
                         <div class="grid__wrap">
                             <div class="grid__item">
                                 <a class="grid__link" href="#"> 
-                                    <img src="img/1.jpg" class="grid__pic" alt="smartphone"> 
+                                    <img src="app/img/1.jpg" class="grid__pic" alt="smartphone"> 
                                     <div class="grid__overlay">
                                         <div class="grid__text">
                                             Смартфоны
@@ -108,7 +108,7 @@
                             </div>
                             <div class="grid__item">
                                 <a class="grid__link" href="#"> 
-                                    <img src="img/2.jpg" class="grid__pic" alt="laptop"> 
+                                    <img src="app/img/2.jpg" class="grid__pic" alt="laptop"> 
                                     <div class="grid__overlay">
                                         <div class="grid__text">
                                             Ноутбуки
@@ -120,7 +120,7 @@
                         <div class="grid__wrap">
                             <div class="grid__item">
                                 <a class="grid__link" href="#"> 
-                                    <img src="img/3.jpg" class="grid__pic" alt="microphone"> 
+                                    <img src="app/img/3.jpg" class="grid__pic" alt="microphone"> 
                                     <div class="grid__overlay">
                                         <div class="grid__text">
                                             Микрофоны
@@ -130,7 +130,7 @@
                             </div>
                             <div class="grid__item">
                                 <a class="grid__link" href="#"> 
-                                    <img src="img/4.jpg" class="grid__pic" alt="game_console"> 
+                                    <img src="app/img/4.jpg" class="grid__pic" alt="game_console"> 
                                     <div class="grid__overlay">
                                         <div class="grid__text">
                                             Игровые приставки
@@ -147,21 +147,21 @@
                     <div class="advantage">
                         <div class="advantage__item">
                             <span class="icon">
-                                <img src="img/icon1.svg" alt="icon" class="icon__pic">
+                                <img src="app/img/icon1.svg" alt="icon" class="icon__pic">
                             </span>
                             <h3 class="advantage__headline">Поддержка 24/7</h3>
                             <p class="advantage__parag">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан.</p>
                         </div>
                         <div class="advantage__item">
                             <span class="icon">
-                                <img src="img/icon2.svg" alt="icon" class="icon__pic">
+                                <img src="app/img/icon2.svg" alt="icon" class="icon__pic">
                             </span>
                             <h3 class="advantage__headline">Удобный интерфейс</h3>
                             <p class="advantage__parag">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан.</p>
                         </div>
                         <div class="advantage__item">
                             <span class="icon">
-                                <img src="img/icon3.svg" alt="icon" class="icon__pic">
+                                <img src="app/img/icon3.svg" alt="icon" class="icon__pic">
                             </span>
                             <h3 class="advantage__headline">Гибкая настройка</h3>
                             <p class="advantage__parag">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан.</p>
@@ -183,7 +183,7 @@
         </div>
     </div>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-   <script src="js/script.js"></script>
+   <script src="app/lib/owlcarousel/owl.carousel.min.js"></script>
+   <script src="app/js/script.js"></script>
 </body>
 </html>
