--- a/testForAdamant/index.html
+++ b/testForAdamant/index.html
@@ -16,7 +16,7 @@
             <div class="header__top">
                 <div class="header__logo">
                     <a href="#" class="logo">
-                        <img src="img/logo.png" alt="logo" class="logo__picture">
+                        <img src="app/img/logo.png" alt="logo" class="logo__picture">
                     </a>
                 </div>
                 
