--- a/testFMF/index1.html
+++ b/testFMF/index1.html
@@ -21,12 +21,12 @@
 
                     <label class="form__subtitle">
                         Метраж комнаты<br>
-                        <input type="number" name="meter" class="form__entry-field" placeholder="Введите метраж помещения в кв.м"><br>
+                        <input type="number" name="meter" id="num1" class="form__entry-field" placeholder="Введите метраж помещения в кв.м"><br>
                     </label>
 
                     <label class="form__subtitle">
                         Сколько кв.м в упаковке<br>
-                        <input type="number" name="quantity" class="form__entry-field" placeholder="Введите сколько кв.м в упаковке"><br>
+                        <input type="number" name="quantity" id="num2" class="form__entry-field" placeholder="Введите сколько кв.м в упаковке"><br>
                     </label>
 
                     <div class="form__subtitle">
