--- a/testFMF/index.html
+++ b/testFMF/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel = "stylesheet" href = "app/css/main.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="./app/script.js"></script>
     <title>Document</title>
 </head>
     <body>
@@ -42,8 +44,14 @@
 
         <div class="navigation__wrap">
             <div class="row">
+                <div class="navigation__btn">
+                    <a href="#" class="burger">
+                        <span></span>
+                    </a>
+                </div>
                 <nav class="navigation">
                     <div class="navigation__container">
+                        
                         <ul class="navigation__item">
                             <img src="app/img/1.png" alt="icon" class="navigation__icon">
                             <a href="#" class="navigation__link">Работодателям</a>
@@ -68,8 +76,6 @@
                             <img src="app/img/6.png" alt="icon" class="navigation__icon">
                             <a href="#" class="navigation__link">Контакты</a>
                         </ul>
-                    </div>
-                    <div class="navigation__container">
                         <input type="search" name="search" placeholder="Поиск по сайту" class="navigation__search">
                     </div>
                 </nav>  
